test/src/e2e_vm_tests/test_programs/should_fail/impure_trait_read_calls_impure_write/src/main.sw
contract;

trait A {
    #[storage(write)]
    fn f(self) -> bool;
}

impl A for bool {
    #[storage(write)]
    fn f(self) -> bool {
        self
    }
}

#[storage(read)]
pub fn g() -> bool {
    true.f()
}
